# var_n7k_parkbot

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
launch/: gamma.launch.py  gazebo_with_robot.launch.py
parking_logic_node/: parking_logic.py
robot_description/: tb3_plain.sdf  tb3_plain.urdf  turtlebot3.urdf.xacro  turtlebot3_burger.urdf
rviz_config/: gamma.rviz  parking_debug.rviz  rviz.rviz
teleop_test/: teleop.launch.py
var_n7k_parkbot/parking_logic_node/: parking_logic.py
world/: gamma.sdf  parking_lot.sdf  parking_lot.world  parking_lot1.sdf  ures.sdf
